--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!--========== CSS ==========-->
     <link rel="stylesheet" href="assets/css/styles.css">
 
-    <title>Responsive website food</title>
+    <title>Testy Food Corner</title>
 </head>
 
 <body>
